# dchat

./: .dockerignore  .gitignore  00_DEPLOYMENT_PACKAGE_README.md  ALL_PROBLEMS_FIXED_COMPLETE.md  API_SPECIFICATION.md  ARCHITECTURE.md  AUTOMATED_SSL_SETUP.md  BACKEND_SUMMARY.md  BLOCKCHAIN_CRATE_QUICK_REF.md  BLOCKCHAIN_RESTRUCTURING_COMPLETE.md  BLOCKCHAIN_SDK_FIXES_COMPLETE.md  BOT_SYSTEM_COMPLETE.md  BUILD_FIXES.md  BUILD_FIXES_IMPLEMENTATION_SUMMARY.md  BUILD_FIXES_SUMMARY.md  BUILD_FIX_COMPLETE_CHECKLIST.md  BUILD_FIX_DELIVERABLES.md  BUILD_FIX_MASTER_INDEX.md  BUILD_IN_PROGRESS.md  BUILD_PROGRESS.md  BUILD_STATUS.md  BUILD_STATUS_FINAL.txt  CHANNEL_FILTER_TEST.rs  CHANNEL_MESSAGE_RETRIEVAL_FINAL_REPORT.md  CHANNEL_RETRIEVAL_FIX.md  CLOUDFLARE_SSL_SETUP.md  CODE_QUALITY_FIXES_REPORT.md  COMPILATION_FIXES_COMPLETE.md  COMPILATION_FIXES_SUMMARY.md  COMPILATION_SUCCESS.md  COMPILER_FIXES_COMPLETE.md  COMPLETE_CHECKLIST.md  COMPLETE_FIXES_SUMMARY.md  CONTRIBUTING.md  CRATE_REORGANIZATION_ANALYSIS.md  CRATE_REORGANIZATION_COMPLETE.md  Cargo.toml  DECENTRALIZATION_EXPLAINED.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE_SUMMARY.md  (+219 more)
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy-production.yml  deploy-staging.yml  security.yml
benches/: concurrent_clients.rs  crypto_performance.rs  database_queries.rs  memory_usage.rs  message_throughput.rs  network_latency.rs  relay_performance.rs
benchmarks/: README.md
config/: relay.toml  relay1.toml  relay2.toml  relay3.toml
crates/dchat-accessibility/: Cargo.toml
crates/dchat-accessibility/src/: lib.rs  tts.rs
crates/dchat-blockchain/: Cargo.toml
crates/dchat-blockchain/src/: chat_chain.rs  client.rs  cross_chain.rs  currency_chain.rs  lib.rs  rpc.rs  tokenomics.rs
crates/dchat-bots/: Cargo.toml  INTEGRATION_GUIDE.md  MEDIA_PROFILES_SEARCH.md
crates/dchat-bots/examples/: complete_integration.rs
crates/dchat-bots/src/: bot_api.rs  bot_manager.rs  commands.rs  inline.rs  lib.rs  music_api.rs  permissions.rs  search.rs  storage.rs  webhook.rs
crates/dchat-bridge/: Cargo.toml
crates/dchat-chain/: Cargo.toml
crates/dchat-chain/src/: dispute_resolution.rs  insurance_fund.rs  lib.rs  pruning.rs  sharding.rs  transactions.rs
crates/dchat-core/: Cargo.toml
crates/dchat-core/src/: config.rs  error.rs  events.rs  lib.rs  types.rs
crates/dchat-crypto/: Cargo.toml
crates/dchat-crypto/src/: encryption.rs  handshake.rs  kdf.rs  keys.rs  lib.rs  noise.rs  post_quantum.rs  rotation.rs  signatures.rs
crates/dchat-data/: Cargo.toml  README.md
crates/dchat-data/src/: lib.rs
crates/dchat-distribution/: Cargo.toml
crates/dchat-distribution/src/: gossip.rs  lib.rs  package.rs
crates/dchat-governance/: Cargo.toml
crates/dchat-governance/src/: abuse_reporting.rs  lib.rs  moderation.rs  upgrade.rs  voting.rs
crates/dchat-identity/: Cargo.toml
crates/dchat-identity/src/: biometric.rs  burner.rs  derivation.rs  device.rs  enclave.rs  guardian.rs  guardian_recovery.rs  identity.rs  lib.rs  mpc.rs  profile.rs  storage.rs  sync.rs  verification.rs
crates/dchat-marketplace/: Cargo.toml
crates/dchat-marketplace/src/: escrow.rs  lib.rs
crates/dchat-messaging/: Cargo.toml
crates/dchat-messaging/src/: channel_access.rs  delivery.rs  expiration.rs  lib.rs  media.rs  ordering.rs  queue.rs  types.rs
crates/dchat-network/: Cargo.toml
crates/dchat-network/src/: behavior.rs  discovery_old.rs  eclipse_prevention.rs  gossip_sync.rs  lib.rs  nat_traversal.rs  onion_routing.rs  rate_limit.rs  rate_limiting.rs  relay.rs  relay_network.rs  routing.rs  swarm.rs  transport.rs
crates/dchat-network/src/connection/: health.rs  mod.rs  pool.rs  reconnect.rs
crates/dchat-network/src/discovery/: bootstrap.rs  dht.rs  mod.rs  peer_info.rs  routing_table.rs
crates/dchat-network/src/gossip/: flood_control.rs  message_cache.rs  mod.rs  protocol.rs
crates/dchat-network/src/nat/: hole_punching.rs  mod.rs  stun.rs  turn.rs  upnp.rs
crates/dchat-observability/: Cargo.toml
crates/dchat-observability/src/: alerting.rs  lib.rs
crates/dchat-privacy/: Cargo.toml
crates/dchat-privacy/src/: blind_tokens.rs  lib.rs  stealth.rs  zk_proofs.rs
crates/dchat-sdk-rust/: Cargo.toml
crates/dchat-sdk-rust/examples/: basic_chat.rs  relay_node.rs
crates/dchat-sdk-rust/src/: client.rs  config.rs  error.rs  lib.rs  relay.rs
crates/dchat-storage/: Cargo.toml
crates/dchat-storage/src/: backup.rs  database.rs  deduplication.rs  file_upload.rs  lib.rs  lifecycle.rs  schema.rs
crates/dchat-testing/: Cargo.toml
docs/: API_DOCUMENTATION.md  DISASTER_RECOVERY.md  PENETRATION_TESTING_TEMPLATE.md  SECURITY_AUDIT_CHECKLIST.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: identity_derivation.rs  keypair_generation.rs  message_parsing.rs  network_packet.rs  noise_handshake.rs
helm/dchat/: Chart.yaml  values.yaml
monitoring/: README.md  alert-rules.yaml  dashboards-configmap.yaml  pagerduty-integration.yaml  prometheus-values.yaml  prometheus.yml
scripts/: README.md  backup.ps1  build-init.ps1  build-init.sh  deploy-docker.sh  restore.ps1  rotate-keys.ps1  testnet-message-propagation.ps1  verify-backups.ps1  verify-build-fixes.ps1  verify-build-fixes.sh
sdk/: COMPLETE_FILE_INDEX.md  COMPLETE_SDK_STATUS.md  SDK_INTEGRATION_GUIDE.md  SESSION_10_COMPLETION_SUMMARY.md  TASK_10_COMPLETION.txt
sdk/dart/: README.md  (+4 more)
sdk/rust/: Cargo.toml  README.md
sdk/rust/examples/: blockchain_client.rs  complete_workflow.rs  crypto_operations.rs
sdk/rust/src/: lib.rs
sdk/rust/src/blockchain/: chat_chain.rs  client.rs  cross_chain.rs  currency_chain.rs  mod.rs  transaction.rs
sdk/rust/src/crypto/: mod.rs
sdk/rust/src/user/: manager.rs  mod.rs  models.rs
src/: lib.rs  main.rs  user_management.rs
test-launch/: docker-compose.json  genesis.json  testnet-info.json
tests/: INTEGRATION_TESTS_COMPLETE.md  TEST_EXECUTION_REPORT.md  database_pool_tests.rs  e2e_tests.rs  integration_tests.rs  sprint9_integration.rs
validator_keys/: validator1.key  validator2.key  validator3.key  validator4.key
(+103 files in other folders)
