[package]
name = "dchat-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
dchat-crypto = { path = "../crates/dchat-crypto" }
dchat-messaging = { path = "../crates/dchat-messaging" }
dchat-network = { path = "../crates/dchat-network" }
dchat-identity = { path = "../crates/dchat-identity" }

# Dependencies for fuzz targets
blake3 = "1.5"
ed25519-dalek = "2.1"
x25519-dalek = "2.0"
snow = "0.9"
bincode = "1.3"
serde_json = "1.0"
toml = "0.8"

[dependencies.dchat]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "noise_handshake"
path = "fuzz_targets/noise_handshake.rs"
test = false
doc = false

[[bin]]
name = "message_parsing"
path = "fuzz_targets/message_parsing.rs"
test = false
doc = false

[[bin]]
name = "keypair_generation"
path = "fuzz_targets/keypair_generation.rs"
test = false
doc = false

[[bin]]
name = "network_packet"
path = "fuzz_targets/network_packet.rs"
test = false
doc = false

[[bin]]
name = "identity_derivation"
path = "fuzz_targets/identity_derivation.rs"
test = false
doc = false
