[package]
name = "dchat-accessibility"
version = "0.1.0"
edition = "2021"

license.workspace = true
[dependencies]
dchat-core = { path = "../dchat-core" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
