[package]
name = "dchat-blockchain"
version = "0.1.0"
edition = "2021"
description = "Blockchain client for parallel chain architecture (Chat Chain + Currency Chain)"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dchat-chain = { path = "../dchat-chain" }
dchat-core = { path = "../dchat-core" }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
