[package]
name = "dchat-bots"
version = "0.1.0"
edition = "2021"

[dependencies]
dchat-core = { path = "../dchat-core" }
dchat-messaging = { path = "../dchat-messaging" }
dchat-identity = { path = "../dchat-identity" }
dchat-storage = { path = "../dchat-storage" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client/server
reqwest = { version = "0.11", features = ["json"] }
axum = { version = "0.7", features = ["macros"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"

# Webhooks
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
hex = "0.4"

# URL encoding for API calls
urlencoding = "2.1"

[dev-dependencies]
tokio-test = "0.4"
