[package]
name = "dchat-chain"
version = "0.1.0"
edition = "2021"

license.workspace = true
[dependencies]
dchat-core = { path = "../dchat-core" }
dchat-crypto = { path = "../dchat-crypto" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
ed25519-dalek = "2.1"
thiserror = "1.0"
chrono = "0.4"
uuid = { version = "1.10", features = ["v4", "serde"] }
rand = "0.8"
sha2 = "0.10"

[dev-dependencies]
tokio = { version = "1.35", features = ["full"] }
