[package]
name = "dchat-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
pq-crypto = [] # Post-quantum cryptography (future feature)

[dependencies]
dchat-core = { path = "../dchat-core" }

# Cryptography
snow = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
blake3 = { workspace = true }
sha2 = { workspace = true }
argon2 = { workspace = true }
aes-gcm = "0.10"

# Post-quantum cryptography (ML-KEM is the standardized version of Kyber)
pqcrypto-mlkem = { workspace = true }
pqcrypto-falcon = { workspace = true }
pqcrypto-traits = { workspace = true }

# Utilities
serde = { workspace = true }
bincode = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
zeroize = "1.8"
constant_time_eq = "0.3"
hkdf = "0.12"
getrandom = "0.2"
toml = "0.8"
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = "0.4"