[package]
name = "dchat-distribution"
version = "0.1.0"
edition = "2021"

[dependencies]
dchat-core = { path = "../dchat-core" }
dchat-governance = { path = "../dchat-governance" }

# Cryptography
ed25519-dalek = "2.0"
sha2 = "0.10"
blake3 = "1.5"
hex = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# IPFS integration
ipfs-api-backend-hyper = { version = "0.6", optional = true }

# HTTP downloads
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }

# File system
tempfile = "3.8"
dirs = "5.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["serde", "v4"] }

[features]
default = []
ipfs = ["ipfs-api-backend-hyper"]
