[package]
name = "dchat-identity"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dchat-core = { path = "../dchat-core" }
dchat-crypto = { path = "../dchat-crypto" }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
sha2 = "0.10"
sqlx = { workspace = true }

# Platform-specific dependencies for biometric/enclave support
[target.'cfg(target_os = "ios")'.dependencies]
security-framework = "2.9"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[dev-dependencies]
tokio-test = "0.4"
proptest = { workspace = true }