[package]
name = "dchat-messaging"
version = "0.1.0"
edition = "2021"

license.workspace = true
[dependencies]
# Workspace dependencies
dchat-core = { path = "../dchat-core" }
dchat-crypto = { path = "../dchat-crypto" }
dchat-network = { path = "../dchat-network" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
bincode = "1.3"

# Cryptography
blake3 = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
