[package]
name = "dchat-network"
version = "0.1.0"
edition = "2021"

license.workspace = true
[dependencies]
# Workspace dependencies
dchat-core = { path = "../dchat-core" }
dchat-crypto = { path = "../dchat-crypto" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Networking
libp2p = { version = "0.54", features = [
    "kad", "noise", "tcp", "dns", "websocket", "relay", "dcutr", 
    "mdns", "identify", "ping", "gossipsub", "yamux", "tokio",
    "macros"  # Enable NetworkBehaviour derive macro
] }

# Serialization
serde = { workspace = true }
bincode = "1.3"

# Utilities
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
futures = "0.3"
blake3 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
