[package]
name = "dchat-privacy"
version = "0.1.0"
edition = "2021"

license.workspace = true
[dependencies]
# Core dependencies
dchat-core = { path = "../dchat-core" }
dchat-crypto = { path = "../dchat-crypto" }

# Cryptography
curve25519-dalek = "4.1"
ed25519-dalek = "2.1"
blake3 = "1.5"
rand = "0.8"

# Zero-knowledge proofs
# Note: Using lightweight custom implementation for now
# Future: Consider arkworks-rs or bellman for production ZK

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
tokio = { version = "1.35", features = ["full"] }
