[package]
name = "dchat-sdk-rust"
version = "0.1.0"
edition = "2021"
description = "dchat Rust SDK - Build decentralized chat applications"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dchat/dchat"
documentation = "https://docs.rs/dchat-sdk-rust"

[dependencies]
dchat-core = { path = "../dchat-core" }
dchat-crypto = { path = "../dchat-crypto" }
dchat-identity = { path = "../dchat-identity" }
dchat-messaging = { path = "../dchat-messaging" }
dchat-network = { path = "../dchat-network" }
dchat-storage = { path = "../dchat-storage" }

tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
