[package]
name = "dchat-storage"
version = "0.1.0"
edition = "2021"

license.workspace = true
[dependencies]
# Workspace dependencies
dchat-core = { path = "../dchat-core" }
dchat-crypto = { path = "../dchat-crypto" }
dchat-messaging = { path = "../dchat-messaging" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
blake3 = { workspace = true }
sha2 = "0.10"

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
