[workspace]

[package]
name = "dchat-sdk"
version = "0.1.0"
edition = "2021"
authors = ["dchat contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dchat/dchat"
description = "dchat Rust SDK - Build decentralized chat applications with blockchain integration"
readme = "README.md"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = "0.21"
uuid = { version = "1.6", features = ["v4", "serde"] }
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
thiserror = "1.0"
async-trait = "0.1"
hex = "0.4"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"

[[example]]
name = "complete_workflow"
path = "examples/complete_workflow.rs"

[[example]]
name = "blockchain_client"
path = "examples/blockchain_client.rs"

[[example]]
name = "crypto_operations"
path = "examples/crypto_operations.rs"

[lib]
name = "dchat_sdk"
path = "src/lib.rs"
